<resources>
    <string name="app_name">SpeedwayO1</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="singIn">Sing in</string>
    <string name="nickname">Nickname</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="passwordTooShort">Password too short!</string>
    <string name="invalidMail">Invalid mail</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="invalidName">Name too short!</string>
    <string name="acceptRegulations">Accept the regulations!</string>
    <string name="passwordNotTheSame">The password is not the same!</string>
    <string name="regulations">I accept the regulations.</string>
    <string name="language">Language:</string>
    <string name="points">Points:</string>

    <string-array name="language">
        <item>English</item>
        <item>Polish</item>
        <item>German</item>
    </string-array>
</resources>